Adjusting to ES6/4.3