@@ -17,10 +17,11 @@
 package org.graylog.testing.utils;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.google.auto.value.AutoValue;
 import io.restassured.specification.RequestSpecification;
 
+import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 
 import static io.restassured.RestAssured.given;
 import static org.hamcrest.Matchers.notNullValue;
@@ -28,16 +29,40 @@ import static org.hamcrest.Matchers.notNullValue;
 public final class StreamUtils {
     private StreamUtils() {}
 
-    public record StreamRule(@JsonProperty("type") int type,
-                             @JsonProperty("value") String value,
-                             @JsonProperty("field") String field,
-                             @JsonProperty("inverted") boolean inverted) {}
-    record CreateStreamRequest(@JsonProperty("title") String title,
-                               @JsonProperty("rules") Collection<StreamRule> streamRules,
-                               @JsonProperty("index_set_id") String indexSetId) {}
+    @AutoValue
+    public abstract static class StreamRule {
+        @JsonProperty("type")
+        public abstract int type();
+        @JsonProperty("value")
+        public abstract String value();
+        @JsonProperty("field")
+        public abstract String field();
+        @JsonProperty("inverted")
+        public abstract boolean inverted();
+        public static StreamRule create(@JsonProperty("type") int type,
+                                        @JsonProperty("value") String value,
+                                        @JsonProperty("field") String field,
+                                        @JsonProperty("inverted") boolean inverted) {
+            return new AutoValue_StreamUtils.StreamRule(type, value, field, inverted);
+        }
+    }
+
+    public abstract static class CreateStreamRequest {
+        @JsonProperty("title")
+        public abstract String title();
+        @JsonProperty("rules")
+        public abstract Collection<StreamRule> streamRules();
+        @JsonProperty("index_set_id")
+        public abstract String indexSetId();
+        public static CreateStreamRequest create(@JsonProperty("title") String title,
+                                                 @JsonProperty("rules") Collection<StreamRule> streamRules,
+                                                 @JsonProperty("index_set_id") String indexSetId) {
+            return new AutoValue_StreamUtils.CreateStreamRequest(title, streamRules, indexSetId);
+        }
+    }
 
     public static String createStream(RequestSpecification requestSpec, String title, String indexSetId, StreamRule... streamRules) {
-        final CreateStreamRequest body = new CreateStreamRequest(title, List.of(streamRules), indexSetId);
+        final CreateStreamRequest body = CreateStreamRequest.create(title, Arrays.asList(streamRules), indexSetId);
         final String streamId = given()
                 .spec(requestSpec)
                 .when()
